<resources>
    <string name="app_name">ShowTrack</string>
    <string name="adicionar_nova_s_rie">Adicionar nova série</string>
    <string name="hm_nenhuma_s_rie_para_ser_exibida_aqui">Hm, nenhuma série para ser exibida aqui...</string>
    <string name="que_tal_adicionar_uma_nova">Que tal adicionar uma nova?</string>
    <string name="pesquisar_nova_s_rie">Pesquisar nova série</string>
    <string name="voltar">Voltar</string>
    <string name="novo_usuario">Novo usuário(a)</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="concluir">Concluir</string>
    <string name="home_page">Home Page</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="bem_vindo_a_ao_showtrack">Bem Vindo(a) ao ShowTrack!</string>
    <string name="login">Login</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="insira_o_email_cadastrado_no_app_para_recuperacao_de_senha">Insira o e-mail cadastrado no app para \nrecuperação de senha</string>
</resources>