<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.HomeActivity">

    <TextView
        android:id="@+id/homeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Home Page"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="21dp"
        android:fontFamily="@font/glory_regular"
        android:textSize="20sp"
        android:textColor="@color/cor_primaria"
        />

    <RelativeLayout
        android:id="@+id/buttonPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/add_serie_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:layout_marginHorizontal="40dp">
        <TextView
            android:id="@+id/buttonText"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:text="@string/adicionar_nova_s_rie"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/glory_semibold"/>
        <ImageView
            android:id="@+id/buttonIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
           android:layout_toRightOf="@id/buttonText"
            android:layout_centerInParent="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/circle_plus_max" />
    </RelativeLayout>

    <TextView
        android:id="@+id/bodyTextFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hm_nenhuma_s_rie_para_ser_exibida_aqui"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/glory_medium"
        android:textSize="20sp"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/bodyTextSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bodyTextFirst"
        android:layout_marginTop="10dp"
        android:text="@string/que_tal_adicionar_uma_nova"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/glory_medium"
        android:textSize="20sp"
        android:layout_centerInParent="true"/>

</RelativeLayout>